# FFmpegDemo

./: README.md  local.properties
app/: build.gradle
app/src/androidTest/java/com/tracyliu/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/tracyliu/ffmpegdemo/: MainActivity.java
app/src/test/java/com/tracyliu/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
